# llm-d-latency-predictor

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile-prediction  Dockerfile-test  Dockerfile-training  Makefile  OWNERS  README.md  build-deploy.sh  constraints.txt  go.mod  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: feature_request.yml  new-release.md
.github/actions/docker-build-and-push/: action.yml
.github/workflows/: build-image.yaml  ci-main-publish.yaml  ci-pr-build.yaml  ci-pr-checks.yaml  ci-release-notes.yaml  ci-release.yaml
benchmarks/: README.md  offline_feature_ab.py  requirements.txt  run_validation.py  test_parity.py  trace_recorder.py  workload-spec.yaml
benchmarks/ci/: feature-ab.yaml
benchmarks/traces/: README.md  bimodal-h200-spec.yaml  bimodal-h200.jsonl  chatbot-synthetic-h200-spec.yaml  chatbot-synthetic-h200.jsonl  sharegpt-h200-spec.yaml  sharegpt-h200.jsonl
common/: __init__.py  ci
deploy/: dual-server-deployment.yaml  test-dual-server-deployment.yaml
deploy/overlays/openshift/: kustomization.yaml  namespace.yaml
deploy/overlays/openshift/training/: pvc.yaml
prediction/: Dockerfile  prediction_server.py  requirements.in  requirements.txt
src/llm_d_latency_predictor/: __init__.py  aci.py  calibration.py  prediction_server.py  training_server.py
tests/: Dockerfile  requirements.in  requirements.txt  test_aci.py  test_calibration_trigger.py  test_dual_server_client.py
tests/drift_harness/: README.md  scrape_metrics.py  synth_workload.py
training/: Dockerfile  requirements.txt  training_server.py
